--- a/src/Lider.form
+++ b/src/Lider.form
@@ -3,21 +3,13 @@
   <grid id="27dc6" binding="PanelLider" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="587" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="500" height="250"/>
+    </properties>
     <border type="none"/>
     <children>
-      <component id="7e00b" class="javax.swing.JTextPane" binding="MenuLider">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="&#9;&#9;&#9;Usuario: Administrador"/>
-        </properties>
-      </component>
       <component id="b3bdb" class="javax.swing.JButton" binding="AsignarTareas">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -34,6 +26,14 @@
           <text value="Visualizar progreso del equipo"/>
         </properties>
       </component>
+      <component id="41240" class="javax.swing.JLabel" binding="Lider">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Usuario: Administrador"/>
+        </properties>
+      </component>
       <component id="805f5" class="javax.swing.JButton" binding="AgregarMiembro">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -48,6 +48,14 @@
         </constraints>
         <properties>
           <text value="Cerrar sesión"/>
+        </properties>
+      </component>
+      <component id="48e7d" class="javax.swing.JLabel" binding="ImagenAdministrador">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Label"/>
         </properties>
       </component>
     </children>
