--- a/src/Login.form
+++ b/src/Login.form
@@ -1,52 +1,96 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Login">
-  <grid id="27dc6" binding="PanelLogin" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="PanelLogin" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="15" left="15" bottom="15" right="15"/>
     <constraints>
       <xy x="20" y="20" width="709" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-8669467"/>
+      <foreground color="-8669467"/>
+      <inheritsPopupMenu value="false"/>
+      <preferredSize width="500" height="250"/>
+    </properties>
     <border type="none"/>
     <children>
-      <component id="7185c" class="javax.swing.JTextPane" binding="TituloLogin">
+      <hspacer id="fecbf">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <text value="&#9;&#9;Taskflow System Software Development"/>
-        </properties>
-      </component>
-      <component id="efa73" class="javax.swing.JTextArea" binding="Usuario">
+      </hspacer>
+      <hspacer id="8bb46">
         <constraints>
-          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <hspacer id="88c98">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <component id="42a93" class="javax.swing.JLabel" binding="Usuario">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Usuario:"/>
         </properties>
       </component>
-      <component id="38b67" class="javax.swing.JTextArea" binding="Clave">
+      <component id="50832" class="javax.swing.JLabel" binding="Clave">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Contraseña:"/>
         </properties>
       </component>
-      <component id="c38cf" class="javax.swing.JTextField" binding="IngresoUsuario">
+      <component id="2b09b" class="javax.swing.JTextField" binding="IngresarUsuario">
         <constraints>
-          <grid row="1" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties/>
       </component>
-      <component id="7f95c" class="javax.swing.JTextField" binding="IngresoClave">
+      <component id="c5a10" class="javax.swing.JButton" binding="IngresoSistema">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Iniciar Sesión"/>
+        </properties>
+      </component>
+      <component id="29f84" class="javax.swing.JLabel" binding="TituloLogin">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="TaskFlow Software Development"/>
+        </properties>
+      </component>
+      <component id="e915f" class="javax.swing.JLabel" binding="TipoUsuario">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Tipo de usuario:"/>
+        </properties>
+      </component>
+      <component id="a9396" class="javax.swing.JComboBox" binding="SeleccionUsuario">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <model>
+            <item value=""/>
+            <item value="Líder del equipo"/>
+            <item value="Miembro del equipo"/>
+          </model>
+          <requestFocusEnabled value="false"/>
+          <toolTipText value=""/>
+        </properties>
+      </component>
+      <component id="c43fc" class="javax.swing.JPasswordField" binding="IngresoClave">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -54,60 +98,20 @@
         </constraints>
         <properties/>
       </component>
-      <component id="9dd47" class="javax.swing.JButton" binding="IniciarSesion">
+      <component id="38c8e" class="javax.swing.JLabel" binding="ImagenLogin">
         <constraints>
-          <grid row="4" column="0" row-span="3" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Iniciar sesión"/>
-        </properties>
-      </component>
-      <component id="dd81a" class="javax.swing.JTextArea" binding="NuevosUsuarios">
-        <constraints>
-          <grid row="4" column="2" row-span="4" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="¿Aún no eres usuario de este sistema?&#10;Registrate"/>
-        </properties>
-      </component>
-      <component id="25cf8" class="javax.swing.JComboBox" binding="SeleccionUsuario">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <model>
-            <item value=""/>
-            <item value="Líder de equipo"/>
-            <item value="Miembro de equipo"/>
-          </model>
-        </properties>
-      </component>
-      <component id="4e570" class="javax.swing.JTextArea" binding="TipoUsuario">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Tipo de usuario:"/>
-        </properties>
-      </component>
-      <component id="e75c5" class="javax.swing.JLabel" binding="MensajeLogin">
-        <constraints>
-          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Label"/>
         </properties>
       </component>
-      <component id="54ff7" class="javax.swing.JButton" binding="Registrarse">
+      <component id="6ddf" class="javax.swing.JLabel" binding="ErrorIngreso">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Registrate"/>
+          <text value="Label"/>
         </properties>
       </component>
     </children>
