--- a/src/Lideres/VisualizarAvance_Equipo.form
+++ b/src/Lideres/VisualizarAvance_Equipo.form
@@ -39,7 +39,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Nombre:"/>
+          <text value="Título:"/>
         </properties>
       </component>
       <component id="6cbf3" class="javax.swing.JLabel" binding="Tarea">
@@ -74,7 +74,7 @@
           <text value="Buscar"/>
         </properties>
       </component>
-      <component id="cced" class="javax.swing.JLabel" binding="MostrarNombre">
+      <component id="cced" class="javax.swing.JLabel" binding="MostrarTitulo">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
