--- a/src/Lideres/VisualizarAvance_Equipo.form
+++ b/src/Lideres/VisualizarAvance_Equipo.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="512" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="450" height="250"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="ae91c" class="javax.swing.JLabel" binding="VerEstado_Equipo">
@@ -39,7 +41,12 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Título:"/>
+          <enabled value="true"/>
+          <focusable value="true"/>
+          <requestFocusEnabled value="true"/>
+          <text value=""/>
+          <verifyInputWhenFocusTarget value="true"/>
+          <visible value="true"/>
         </properties>
       </component>
       <component id="6cbf3" class="javax.swing.JLabel" binding="Tarea">
@@ -47,7 +54,7 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Tarea asignada:"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="4de1e" class="javax.swing.JTextField" binding="IngresarDato">
@@ -79,7 +86,7 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="81a4c" class="javax.swing.JLabel" binding="MostrarTarea">
@@ -87,7 +94,7 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="ecf35" class="javax.swing.JLabel" binding="Estado">
@@ -95,7 +102,7 @@
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Estado:"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="7f119" class="javax.swing.JLabel" binding="MostrarEstado">
@@ -103,7 +110,7 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value=""/>
         </properties>
       </component>
     </children>
