--- a/src/Lideres/Lider.form
+++ b/src/Lideres/Lider.form
@@ -6,9 +6,15 @@
       <xy x="20" y="20" width="587" height="400"/>
     </constraints>
     <properties>
-      <preferredSize width="500" height="250"/>
+      <background color="-143492"/>
+      <foreground color="-6700571"/>
+      <preferredSize width="400" height="250"/>
     </properties>
-    <border type="none"/>
+    <border type="line">
+      <font/>
+      <title-color color="-2497138"/>
+      <color color="-8919683"/>
+    </border>
     <children>
       <component id="b3bdb" class="javax.swing.JButton" binding="AsignarTareas">
         <constraints>
@@ -24,14 +30,6 @@
         </constraints>
         <properties>
           <text value="Visualizar progreso del equipo"/>
-        </properties>
-      </component>
-      <component id="41240" class="javax.swing.JLabel" binding="Lider">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Usuario: Administrador"/>
         </properties>
       </component>
       <component id="805f5" class="javax.swing.JButton" binding="AgregarMiembro">
@@ -50,12 +48,22 @@
           <text value="Cerrar sesión"/>
         </properties>
       </component>
-      <component id="48e7d" class="javax.swing.JLabel" binding="ImagenAdministrador">
+      <component id="2db46" class="javax.swing.JLabel" binding="ImagenAdministrador">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <icon value="Imagenes/ImagenAdministrador.jpeg"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="41240" class="javax.swing.JLabel" binding="Lider">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="AIGDT" size="18" style="3"/>
+          <text value="Usuario: Administrador"/>
         </properties>
       </component>
     </children>
