--- a/src/LogIn/Login.form
+++ b/src/LogIn/Login.form
@@ -3,21 +3,16 @@
   <grid id="27dc6" binding="PanelLogin" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="15" left="15" bottom="15" right="15"/>
     <constraints>
-      <xy x="20" y="20" width="454" height="219"/>
+      <xy x="37" y="20" width="661" height="415"/>
     </constraints>
     <properties>
       <background color="-8669467"/>
       <foreground color="-8669467"/>
       <inheritsPopupMenu value="false"/>
-      <preferredSize width="500" height="250"/>
+      <preferredSize width="600" height="425"/>
     </properties>
     <border type="none"/>
     <children>
-      <hspacer id="fecbf">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
       <hspacer id="88c98">
         <constraints>
           <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -42,7 +37,7 @@
       <component id="2b09b" class="javax.swing.JTextField" binding="IngresarUsuario">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="100" height="-1"/>
           </grid>
         </constraints>
         <properties/>
@@ -60,7 +55,7 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="AmdtSymbols" size="16" style="1"/>
+          <font name="Castellar" size="16" style="1"/>
           <text value="TaskFlow Software Development"/>
         </properties>
       </component>
@@ -94,12 +89,31 @@
         </constraints>
         <properties/>
       </component>
-      <component id="ef6cc" class="javax.swing.JLabel">
+      <component id="266b3" class="javax.swing.JLabel" binding="ImagenLogin">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <icon value="Imagenes/Login.png"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="abf0b" class="javax.swing.JLabel" binding="ImagenDS">
+        <constraints>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <icon value="Imagenes/ImagenLogin1.jpg"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="e50f7" class="javax.swing.JLabel" binding="ImagenLogo">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <icon value="Imagenes/LogoESFOT.png"/>
+          <text value=""/>
         </properties>
       </component>
     </children>
