--- a/src/Lideres/AsignacionTareas_Lider.form
+++ b/src/Lideres/AsignacionTareas_Lider.form
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Lideres.AsignacionTareas_Lider">
-  <grid id="27dc6" binding="PanelAgregar_Tarea" layout-manager="GridLayoutManager" row-count="10" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="PanelAgregar_Tarea" layout-manager="GridLayoutManager" row-count="10" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="500" height="419"/>
     </constraints>
     <properties>
+      <background color="-6754335"/>
       <preferredSize width="400" height="250"/>
     </properties>
     <border type="none"/>
@@ -15,6 +16,8 @@
           <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <enabled value="true"/>
+          <font name="AIGDT" size="36" style="1"/>
           <text value="Tareas "/>
         </properties>
       </component>
@@ -169,6 +172,15 @@
           </grid>
         </constraints>
         <properties/>
+      </component>
+      <component id="24620" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <icon value="Imagenes/ImagenAgregar_Tarea.png"/>
+          <text value=""/>
+        </properties>
       </component>
     </children>
   </grid>
