--- a/src/Lideres/VisualizarAvance_Equipo.form
+++ b/src/Lideres/VisualizarAvance_Equipo.form
@@ -3,10 +3,12 @@
   <grid id="27dc6" binding="PanelVer_Avance" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="512" height="400"/>
+      <xy x="20" y="20" width="616" height="400"/>
     </constraints>
     <properties>
-      <preferredSize width="450" height="250"/>
+      <background color="-4145162"/>
+      <foreground color="-1710673"/>
+      <preferredSize width="550" height="250"/>
     </properties>
     <border type="none"/>
     <children>
@@ -15,6 +17,7 @@
           <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="AIGDT" size="36" style="2"/>
           <text value="Estado del equipo"/>
         </properties>
       </component>
@@ -33,7 +36,8 @@
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <icon value="Imagenes/VisualizarEstado.png"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="55e09" class="javax.swing.JLabel" binding="Nombre">
