--- a/src/Miembros/ActualizarTarea.form
+++ b/src/Miembros/ActualizarTarea.form
@@ -3,9 +3,12 @@
   <grid id="27dc6" binding="PanelVer_Tareas" layout-manager="GridLayoutManager" row-count="10" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="528" height="419"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-5903201"/>
+      <foreground color="-2636571"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="acdb0" class="javax.swing.JLabel" binding="VerTareas">
@@ -13,6 +16,7 @@
           <grid row="0" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="AIGDT" size="36" style="3"/>
           <text value="Actualizar Tareas"/>
         </properties>
       </component>
@@ -173,7 +177,8 @@
           <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <icon value="Imagenes/ActualizarTarea.png"/>
+          <text value=""/>
         </properties>
       </component>
     </children>
