--- a/src/Miembros/AgregarTarea_Miembros.form
+++ b/src/Miembros/AgregarTarea_Miembros.form
@@ -3,17 +3,20 @@
   <grid id="27dc6" binding="PanelAgregar_Tareas" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="500" height="430"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="b497f" binding="PanelAgregar_Tarea" layout-manager="GridLayoutManager" row-count="10" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="b497f" binding="PanelAgregar_Tarea" layout-manager="GridLayoutManager" row-count="10" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-6112513"/>
+          <foreground color="-4135463"/>
+          <inheritsPopupMenu value="false"/>
           <preferredSize width="400" height="250"/>
         </properties>
         <border type="none"/>
@@ -23,6 +26,7 @@
               <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="AIGDT" size="36" style="2"/>
               <text value="Tareas "/>
             </properties>
           </component>
@@ -177,6 +181,15 @@
               </grid>
             </constraints>
             <properties/>
+          </component>
+          <component id="2db7d" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <icon value="Imagenes/AgregarUsuario.png"/>
+              <text value=""/>
+            </properties>
           </component>
         </children>
       </grid>
