--- a/src/Miembros/Miembros.form
+++ b/src/Miembros/Miembros.form
@@ -3,10 +3,14 @@
   <grid id="27dc6" binding="PanelMiembros" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="590" height="400"/>
     </constraints>
     <properties>
-      <preferredSize width="500" height="400"/>
+      <background color="-143492"/>
+      <enabled value="true"/>
+      <focusable value="true"/>
+      <foreground color="-4726811"/>
+      <preferredSize width="450" height="200"/>
     </properties>
     <border type="none"/>
     <children>
@@ -15,6 +19,7 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="AIGDT" size="24" style="1"/>
           <text value="Usuario: Miembros"/>
         </properties>
       </component>
@@ -44,12 +49,13 @@
           <text value="Cerrar sesión"/>
         </properties>
       </component>
-      <component id="6dfe3" class="javax.swing.JLabel">
+      <component id="6dfe3" class="javax.swing.JLabel" binding="ImagenMiembros">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <icon value="Imagenes/Miembros.jpg"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="b5109" class="javax.swing.JButton" binding="ActualizarTarea">
